tests/NormalTests/paczka1/fuzzy1/23470251.err
Error in line 3: BvhcorGD3k S964 532,0
Error in line 16: BvhcorGD3k S964 40,87
Error in line 12: fv5 S995 48,7
Error in line 14: BvhcorGD3k A74 46,7
Error in line 13: S114 S964 38,8
Error in line 17: fv5 S964 92,8
Error in line 21: fv5 S114 32,7
Error in line 28: 1scßwZl A74 35,6
Error in line 20: np9a0BAzH S964 53,8
Error in line 34: S114 S995 84,1
